--- a/source/R5T.X0001/R5T.X0001.csproj
+++ b/source/R5T.X0001/R5T.X0001.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\R5T.T0103\source\R5T.T0103.X002\R5T.T0103.X002.csproj" />
+    <ProjectReference Include="..\..\..\R5T.T0113.X0001\source\R5T.T0113.X0001\R5T.T0113.X0001.csproj" />
+    <ProjectReference Include="..\..\..\R5T.T0123.X0001\source\R5T.T0123.X0001\R5T.T0123.X0001.csproj" />
+  </ItemGroup>
+
 </Project>
