--- a/source/R5T.X0001/R5T.X0001.csproj
+++ b/source/R5T.X0001/R5T.X0001.csproj
@@ -1,13 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>1591;1573</NoWarn>
   </PropertyGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\..\..\R5T.T0103\source\R5T.T0103.X002\R5T.T0103.X002.csproj" />
     <ProjectReference Include="..\..\..\R5T.T0113.X0001\source\R5T.T0113.X0001\R5T.T0113.X0001.csproj" />
     <ProjectReference Include="..\..\..\R5T.T0123.X0001\source\R5T.T0123.X0001\R5T.T0123.X0001.csproj" />
   </ItemGroup>
-
 </Project>
