--- a/source/R5T.X0001/R5T.X0001.csproj
+++ b/source/R5T.X0001/R5T.X0001.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>net5.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <NoWarn>1591;1573</NoWarn>
+    <CheckEolTargetFramework>false</CheckEolTargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\R5T.T0103\source\R5T.T0103.X002\R5T.T0103.X002.csproj" />
